[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/graphics/ui/icons/conditions/attack_up.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/ui/icons/conditions/defence_down.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/ui/icons/conditions/attack_down.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/ui/icons/conditions/defence_up.png" type="Texture" id=4]
[ext_resource path="res://src/ui/ConditionsPanel.gd" type="Script" id=5]

[node name="ConditionsPanel" type="HBoxContainer"]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackUp" type="TextureRect" parent="."]
visible = false
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 1 )

[node name="AttackDown" type="TextureRect" parent="."]
visible = false
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 3 )

[node name="DefenceUp" type="TextureRect" parent="."]
visible = false
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
texture = ExtResource( 4 )

[node name="DefenceDown" type="TextureRect" parent="."]
visible = false
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
texture = ExtResource( 2 )
